// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expressions is invalid expression checks that the  expression is invalid 1`] = `[SyntaxError: Unexpected token (1:3)]`;

exports[`expressions wrap exxpression should wrap an expression 1`] = `
"eval(\`
    try {
      foo
    } catch (e) {
      e
    }
  \`)"
`;

exports[`expressions wrap exxpression should wrap expression with a comment 1`] = `
"eval(\`
    try {
      foo // yo yo
    } catch (e) {
      e
    }
  \`)"
`;
